# docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/chapters": {
             "get": {
-                "description": "Get list of all chapters",
+                "description": "Get paginated list of all chapters",
                 "produces": [
                     "application/json"
                 ],
@@ -19,6 +19,22 @@
                     "chapters"
                 ],
                 "summary": "Get all chapters",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -226,7 +242,7 @@
         },
         "/courses": {
             "get": {
-                "description": "Get list of all courses",
+                "description": "Get paginated list of courses",
                 "produces": [
                     "application/json"
                 ],
@@ -234,6 +250,22 @@
                     "courses"
                 ],
                 "summary": "Get all courses",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -434,7 +466,7 @@
         },
         "/lessons": {
             "get": {
-                "description": "Get list of all lessons",
+                "description": "Get paginated list of all lessons",
                 "produces": [
                     "application/json"
                 ],
@@ -442,6 +474,22 @@
                     "lessons"
                 ],
                 "summary": "Get all lessons",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
